--- a/src/scss/parts/section.scss
+++ b/src/scss/parts/section.scss
@@ -402,9 +402,7 @@
             }
         }
 
-        &[disabled] {
-            opacity: 0.5;
-        }
+       
     }
 
     .prev {
@@ -723,7 +721,6 @@
             height: 70px;
             object-fit: contain;
             margin-bottom: 60px;
-            flex: 1 1 auto;
 
             @media (max-width:768px) {
                 width: 50px;
